2002-10-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSOutput.m: ([-split:]) In links generated from class and
	method specifications in square brackets, place a space between the
	class and the method name.
	* Tools/gsdoc-1_0_0.dtd: Corrected minor entity errors.

2002-10-21  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/unicode/thai.h: New file.
	* Headers/gnustep/base/NSString.h (_NSStringEncoding): Add
	NSISOThaiStringEncoding.
	* Source/NSString.m (-dataUsingEncoding:allowLossyConversion:): 
	Handle it.
	* Source/Unicode.m (struct _strenc_ str_encoding_table[]): Idem. 
	(GSEncodingForRegistry): Idem.
	(GSToUnicode, GSFromUnicode): Idem.
	(Patches, modified, from Banlu Kemiyatorn <id@project-ile.net>).

2002-10-21  Adam Fedor  <fedor@gnu.org>

	* Source/GSLocale.m (GSLanguageFromLocale): Implement regardless
	of HAVE_LOCALE_H.

	* Source/Unicode.m (GSEncodingForRegistry): New (from
	[GSFontInfo +encodingForRegistry:encoding:]).
	(GSEncodingFromLocale): New.
	(GetDefEncoding): Rearrange encoding check.
	* Resources/Languages/Locale.encodings: New file.

2002-10-21  Adam Fedor  <fedor@gnu.org>

	* Documentation/coding-standards.texi: Update.

2002-10-14  Richard Frith-Macdonald <rfm@gnu.org>

	Source/NSObject.m: Add ([-makeImmutableCopyOnFail:]) for use by methods
	wishing to return constant string/array/dictionary etc results after
	building them using mutable objects they created.
	Source/GSArray.m: Implement ([makeImmutableCopyOnFail:])
	Source/GSString.m: ditto
	Source/GSDictionary.m: ditto
	Source/GSSet.m: ditto
	Source/NSFileManager.m: Use it

2002-10-13  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): remove
	the classes in the _loadingBundle that does not belong to it but with
	frameworks linked with it.
	([NSBundle +bundleForClass:]): construct a list of NSFramework_*
	classes loaded with the bundle.
	([NSBundle -load]): call _addFrameworkFromClass: for all linked